# openrelik-worker-notify

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image.yaml
src/: tasks.py
tests/: test_tasks.py
