[project]
authors = [
    {name = "Julian Hill", email = "julian.hill@ncsc.nl"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-common>=0.7.5",
    "openrelik-worker-common>=0.17.0",
]
name = "openrelik-worker-notify"
version = "0.1.0"
description = "OpenRelik worker that sends workflow notifications to Discord."
readme = "README.md"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
